# CQ-Manager-Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  openapi.yaml  pyproject.toml
src/app/: app.py
src/app/domain/accounts/: dtos.py  exceptions.py  services.py
src/app/domain/accounts/controllers/: user_controller.py
src/app/domain/consolidations/: controllers.py  dtos.py  models.py  services.py
src/app/domain/groups/: controllers.py  dtos.py  models.py  services.py
src/app/domain/projects/: controllers.py  dtos.py  guards.py  models.py  services.py
src/app/domain/questions/: controller.py  dtos.py  middleware.py  models.py  services.py
src/app/domain/terms/: controllers.py  dtos.py  models.py  services.py
src/app/domain/topics/: controllers.py  dtos.py  models.py  services.py
src/app/lib/: orm.py  services.py
tests/integration/: _fixtures.py  test_accounts.py  test_consolidations_api.py  test_consolidations_dto.py  test_groups.py  test_projects.py  test_questions_sparql.py  test_questions_unified.py  test_terms.py  test_topics.py
